# the-jam-machine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Drums.mid  Pipfile  README.md  Synth Bass 1.mid  Synth Lead Square.mid  docker-compose.yml  licence  mixed.mid  pyproject.toml
.claude/: settings.json
.claude/agents/: design_agent.md  documentation_agent.md  git_agent.md  pr_review_agent.md  test_agent.md
.claude/hooks/: protect-main.sh
.claude/skills/check/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/next/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/review/: SKILL.md
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  docker.yml  sync-hf-space.yml
.plans/: CONTINUATION-PROMPT.md  MASTER-PLAN.md  analysis-module.md  audit-main-package.md  ci-badges.md  code-audit-plan.md  dependency-tree.md  design-audit-findings.md  design-audit-fixes.md  design-audit-implementation-plan.md  design-audit.md  examples-reorganization.md  github-pages.md  notebook-github-pages.md  refactor-generate-plan.md  ruff-all-rules.md  test-coverage-audit.md  test-plan.md
agents/: README.md  design_agent.md  documentation_agent.md  git_agent.md  pr_review_agent.md
app/: playground.py
docs/: _config.yml  encoding-decoding.md  index.md
examples/: README.md  __init__.py  encode_decode.py  generate.py  generation_playground.py  track_stats.py
hf_space/: README.md  app.py  requirements.txt
plans/: CONTINUATION-PROMPT.md  audit-genre-prediction.md  code-audit-plan.md
scripts/: build-analysis-page.py  deploy-hf-space.sh  docstring-coverage.sh  run-tests.sh  setup-env.sh
src/jammy/: __init__.py  constants.py  file_utils.py  load.py  logging_config.py  midi_codec.py  tokens.py  utils.py
src/jammy/analysis/: __init__.py  activation.py  attention.py  embedding.py  head_roles.py
src/jammy/app/: __init__.py  playground.py
src/jammy/embedding/: __init__.py  bar_processing.py  decoder.py  encoder.py  event_processing.py  familizer.py  preprocess.py  section_building.py  text_parsing.py  time_processing.py  track_setup.py
src/jammy/generating/: __init__.py  config.py  file_io.py  generate.py  generation_engine.py  piece_builder.py  playback.py  prompt_handler.py  track_builder.py  utils.py  validation.py  visualization.py
src/jammy/preprocessing/: __init__.py  load.py  midi_stats.py  mmd_metadata.py  picker.py  track_stats_for_encoding.py
src/jammy/stats/: track_stats_for_encoding.py
src/jammy/training/: trainer.py  trainer_utils.py
src/jammy/unused/: encoder_oct.py
src/the_jam_machine/: logging_config.py  utils.py
src/the_jam_machine/embedding/: decoder.py  encoder.py  familizer.py  preprocess.py
src/the_jam_machine/generating/: generate.py  generation_engine.py  piece_builder.py  playback.py  prompt_handler.py  track_builder.py  utils.py
src/the_jam_machine/preprocessing/: load.py  midi_stats.py  mmd_metadata.py  picker.py
src/the_jam_machine/stats/: track_stats_for_encoding.py
src/the_jam_machine/training/: trainer.py  trainer_utils.py
test/: __init__.py  conftest.py  test_analysis.py  test_constants.py  test_examples.py  test_file_utils.py  test_load.py  test_logging_config.py  test_midi_codec.py  test_tosort.py  test_utils.py
test/embedding/: __init__.py  test_decoder.py  test_encoder.py  test_familizer.py  test_text_parsing.py
test/fixtures/: sample_midi_text.json
test/generating/: __init__.py  test_config.py  test_generate.py  test_piece_builder.py  test_playback.py  test_prompt_handler.py  test_track_builder.py  test_validation.py
test/helpers/: comparison.py
test/preprocessing/: __init__.py  test_load.py
