[build-system]
requires = ["setuptools", "setuptools.scm"]
build-backend = "setuptools.build_meta"

[project]
name = "the-jam-machine"
description = "generative AI assitant for composing music"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

dependencies = [
    "miditok==1.3.2",
    "miditoolkit",
    "pylab-sdk",
    "matplotlib",
    "numpy",
    "pandas",
    "mido",
    "python-rtmidi",
    "pretty-midi",
    "note-seq",
    "huggingface-hub",
    "pyFluidSynth",
    "pydub",
    "ffmpeg",
    "wandb",
    "tokenizers",
    "datetime",
    "datasets==2.6.1",
    "gradio",
    "transformers",
    "torch",
    "torchvision",
    "accelerate",
    "fuzzywuzzy",
    "httpx>=0.28.1"
]

[project.optional-dependencies]
ci = ["ruff", "pytest", "pytest-cov", "pytest-html", "pip-audit", "bandit", "interrogate"]
notebooks = ["bertviz", "ipykernel", "scikit-learn", "nbconvert"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jammy = ["*.csv", "*.json"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "test"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",    # missing module docstring
    "D104",    # missing package docstring
    "ISC001",  # implicit string concat — conflicts with ruff formatter
    "PLR2004", # magic value comparison — expected with token strings/numbers
    "FBT001",  # boolean positional arg — too strict for Gradio callbacks
    "FBT002",  # boolean default arg — same
    "TD002",   # TODO missing author
    "TD003",   # TODO missing issue link
    "FIX002",  # TODO found — intentional
    "INP001",  # implicit namespace package — app/ and examples/ are not packages
    "ERA001",  # commented-out code — clean up in Phase 14
    "PD002",   # pandas inplace — preprocessing scripts
    "ICN001",  # unconventional import alias
    "BLE001",  # blind except — narrow in Phase 14
    "A001",    # shadowing builtin — fix in Phase 14
    "PLR0913", # too many args — structural, Phase 14
    "PLR0911", # too many returns — inherent to dispatch functions
    "PLR0915", # too many statements — structural, Phase 14
    "C901",    # too complex — structural, Phase 14
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["S101"]  # assert statements are expected in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["jammy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
skips = ["B101", "B311", "B105", "B106"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
fail-under = 95
exclude = ["test/", "examples/"]
verbose = 1

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

