[build-system]
requires = ["setuptools", "setuptools.scm"]
build-backend = "setuptools.build_meta"

[project]
name = "the-jam-machine"
description = "generative AI assitant for composing music"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

dependencies = [
    "miditok==1.3.2",
    "miditoolkit",
    "pylab-sdk",
    "matplotlib",
    "numpy",
    "pandas",
    "mido",
    "python-rtmidi",
    "pretty-midi",
    "note-seq",
    "huggingface-hub",
    "pyFluidSynth",
    "pydub",
    "ffmpeg",
    "wandb",
    "tokenizers",
    "datetime",
    "datasets>=4.0",
    "gradio>=6.7.0",
    "transformers",
    "torch",
    "torchvision",
    "accelerate",
    "fuzzywuzzy",
    "httpx>=0.28.1"
]

[project.optional-dependencies]
ci = ["ruff", "pytest", "pytest-cov", "pytest-html", "pip-audit", "bandit", "interrogate"]
notebooks = ["bertviz", "ipykernel", "scikit-learn", "nbconvert"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jammy = ["*.csv", "*.json"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "test"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ISC001",  # implicit string concat — conflicts with ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["S101", "PLR2004"]
"app/**/*.py" = ["INP001", "PLR0913"]
"examples/**/*.py" = ["INP001"]
"src/jammy/preprocessing/**/*.py" = ["PD002"]
"src/jammy/midi_codec.py" = ["PLR0911"]
"src/jammy/analysis/head_roles.py" = ["C901"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["jammy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
skips = ["B101", "B311", "B105", "B106"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
fail-under = 95
exclude = ["test/", "examples/"]
verbose = 1

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

