[build-system]
requires = ["setuptools", "setuptools.scm"]
build-backend = "setuptools.build_meta"

[project]
name = "the-jam-machine"
description = "generative AI assitant for composing music"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

dependencies = [
    "miditok==1.3.2",
    "miditoolkit",
    "matplotlib",
    "numpy",
    "pandas",
    "mido",
    "python-rtmidi",
    "pretty-midi",
    "note-seq",
    "huggingface-hub",
    "pyFluidSynth",
    "pydub",
    "ffmpeg",
    "wandb",
    "tokenizers",
    "datasets>=4.0",
    "gradio>=6.7.0",
    "transformers",
    "torch",
    "accelerate",
    "fuzzywuzzy",
    "httpx>=0.28.1"
]

[project.optional-dependencies]
ci = ["ruff", "pytest", "pytest-cov", "pytest-html", "pip-audit", "bandit", "interrogate"]
notebooks = ["bertviz", "ipykernel", "scikit-learn", "nbconvert"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jammy = ["*.csv", "*.json"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "test"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ISC001",  # implicit string concat — conflicts with ruff formatter
    "COM812",  # trailing comma — conflicts with ruff formatter (ruff warns about this)
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["S101", "PLR2004"]  # assert is expected in tests; magic values are test data
"src/jammy/app/**/*.py" = ["PLR0913"]  # Gradio callbacks have many args
"examples/**/*.py" = ["INP001"]  # examples/ is not a package
"hf_space/**/*.py" = ["INP001"]  # HF Space shim, not a package

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["jammy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
skips = ["B101", "B311", "B105", "B106"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
fail-under = 95
exclude = ["test/", "examples/"]
verbose = 1

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jammy.training.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

